--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,14 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Alyssa Maravilla # your name (or website title) here
+logo: "/images/download20200402154938.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hi! I am a recent graduate from NJIT!!
+  <br>
+  I have recently completed my degree in Information Technology with a specialization in Web Development and
+  a minor in User Experience.
   <br><br>
-  Second description 
+  Here are some of the project I've worked on in the past few years, thanks for checking out my page!
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
