--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Alyssa Maravilla # your name (or website title) here
-logo: "/images/download20200402154938.png?raw=true" # your photo (or logo) here
+title: Alyssa Marie Dico Maravilla # your name (or website title) here
+logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi! I am a recent graduate from NJIT!!
   <br>
   I have recently completed my degree in Information Technology with a specialization in Web Development and
   a minor in User Experience.
   <br><br>
-  Here are some of the project I've worked on in the past few years, thanks for checking out my page!
+  Here are some of the projects I've worked on in the past few years, thanks for checking out my page!
   <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   
