--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,14 @@ description: > # your text below (remove <br> elements if you don't need line br
   I have recently completed my degree in Information Technology with a specialization in Web Development and
   a minor in User Experience.
   <br><br>
-  Here are some of the projects I've worked on in the past few years, thanks for checking out my page!
+  Just a little bit about me: I enjoy playing video games, ranging from Animal Crossing on Nintendo Switch to various 
+  Japanese JRPGs on PS4 as well. I also enjoy 
+  <br><br>
+  Here are some of the projects I've worked on in the past few years, and thanks for checking out my page!
   <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
+  <br><br>
+  <a href="https://twitter.com/alohasushicore/">Icon Credit @alohasushicore on Twitter!~</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
