--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alyssa Marie Dico Maravilla # your name (or website title) here
-#logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
+logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi! I am a recent graduate from NJIT!!
   <br>
