--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,23 @@
-title: Alyssa Marie Dico Maravilla # your name (or website title) here
+title: Hey! # your name (or website title) here
 logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hi! I am a recent graduate from NJIT!!
+  Hi! My name is Alyssa Marie Dico Maravilla
   <br>
-  I have recently completed my degree in Information Technology with a specialization in Web Development and
-  a minor in User Experience.
+  I have recently completed my Bachelor of Science degree in Information Technology with a specialization in Web Development and
+  a minor in User Experience at New Jersey Institute of Technology.
   <br><br>
   Just a little bit about me: I enjoy playing video games, ranging from Animal Crossing on Nintendo Switch to various 
-  Japanese JRPGs on PS4 as well. I also enjoy 
+  Japanese JRPGs on PS4 as well. I can play many instruments, with guitar, bass, viola, ukulele, and piano just to name a few.
+  
   <br><br>
-  Here are some of the projects I've worked on in the past few years, and thanks for checking out my page!
+  Thanks for checking out my page!
   <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   <br><br>
   <a href="https://twitter.com/alohasushicore/">Icon Credit @alohasushicore on Twitter!~</a>
+  <br><br>
+  [Current Resume] (/pdf/Alyssa Resume Spring 2020.pdf)
+  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
