--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://twitter.com/alohasushicore/">Icon Credit @alohasushicore on Twitter!~</a>
   <br><br>
-  [Current Resume](/pdf/alyssaspringresumespring2020.pdf)
+  [Current Resume](/resume)
   <br><br>
   
   
