--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,9 @@ title: Hey! # your name (or website title) here
 logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi! My name is Alyssa Marie Dico Maravilla
-  <br>
-  I have recently completed my Bachelor of Science degree in Information Technology with a specialization in Web Development and
-  a minor in User Experience at New Jersey Institute of Technology.
   <br><br>
-  Just a little bit about me: I enjoy playing video games, ranging from Animal Crossing on Nintendo Switch to various 
-  Japanese JRPGs on PS4 as well. I can play many instruments, with guitar, bass, viola, ukulele, and piano just to name a few.
+  I'm make things.
+  <br><br>  
   
   <br><br>
   Thanks for checking out my page!
