--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hey! # your name (or website title) here
-logo: "/images/download20200402154839.png?raw=true" # your photo (or logo) here
+logo: "/images/IMG_4177.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi! My name is Alyssa Marie Dico Maravilla
   <br><br>
