--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,13 @@ logo: "/images/itsame.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi! My name is Alyssa Marie Dico Maravilla
   <br><br>
-  I'm make things.
+  I'm a recent grad. And I make things.
   <br><br>  
   
   <br><br>
   Thanks for checking out my page!
+  <br><br> 
+  [Check out my Work!](/portfolio)
   <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   <br><br>
