--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I'm a recent grad. And I make things.
   <br><br>  
-  Thanks for checking out my page!
-  <br><br> 
-  [Check out my Work!](/portfolio)
+  <a href=/portfolio">Check out my work!</a>
   <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   <br><br>
