--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>  
   <a href="/portfolio">Check out my work!</a>
   <br><br>
+  <a href="/experience">Previous Experience</a>
+  <br><br>
   <a href="https://www.linkedin.com/in/alyssam-maravilla/">View My LinkedIn Profile</a> 
   <br><br>
   <a href="/resume">Current Resume</a>
