--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Hey! # your name (or website title) here
 logo: "/images/itsame.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hi! My name is Alyssa Marie Dico Maravilla
+  My name is Alyssa Marie Dico Maravilla
   <br>
   I'm a recent grad. And I make things.
-  <br><br>  
+  <br><br> 
   <a href="/portfolio">Check out my work!</a>
   <br><br>
   <a href="/experience">Previous Experience</a>
