--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/itsame.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My name is Alyssa Marie Dico Maravilla
   <br>
-  I'm a recent grad. And I make things.
+  I'm currently in grad school. And I make things.
   <br><br> 
   <a href="/portfolio">Check out my work!</a>
   <br><br>
